# TimsCam-queue-estimator

./: .gitignore  LICENSE  README.md  config.yaml  export_yolo.py  main.py  person_detection.py  pyproject.toml
tools/: export_yolo.py
visualcounter/: api.py  config.py  models.py  roi.py  service.py
visualcounter/detectors/: base.py  openvino_yolo.py  registry.py
visualcounter/processing/: engine.py
visualcounter/smoothing/: base.py  none.py  registry.py  time_weighted.py
