[project]
name = "timscam-queue-estimator"
version = "0.1.0"
description = "A project to take in a m3u8 playlist / stream and gather info about the number of people"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.13.0.90",
    "openvino>=2025.4.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
export = [
    "ultralytics>=8.3.0",
]

[project.scripts]
visualcounter-api = "main:main"
